[package]
name = "sway-alttab"
description = "Program for switching between windows on swaywm"
version = "0.2.0"
authors = [
    "x1b6e6 <ftdabcde@gmail.com>"
]
edition = "2018"

[dependencies]
evdev-rs-tokio = "0.4"
clap = "2.33"
nix = "0.23"
async-stream = "0.3.2"
futures-core = "0.3.17"
futures-util = "0.3.17"

[dependencies.tokio]
version = "1.12.0"
features = [
    "fs",
    "macros",
    "rt",
    "sync",
]

[dependencies.swayipc-async]
git = "https://github.com/jaycefayne/swayipc-rs"
