[package]
name = "sway-alttab"
version = "0.3.0"
repository = "https://github.com/x1b6e6/sway-alttab.git"
description = "Program for switching between windows on swaywm"
authors = [
    "x1b6e6 <ftdabcde@gmail.com>",
]
license = "MIT"
edition = "2018"

[dependencies]
evdev-rs-tokio = "0.4"
clap = "2.33"
nix = "0.23"
async-stream = "0.3.2"
futures-core = "0.3.17"
futures-util = "0.3.17"

[dependencies.tokio]
version = "1.12.0"
features = [
    "fs",
    "macros",
    "rt",
    "sync",
]

[dependencies.swayipc-async]
git = "https://github.com/jaycefayne/swayipc-rs"
