[package]
name = "sway-alttab"
version = "0.3.0"
repository = "https://github.com/x1b6e6/sway-alttab.git"
description = "Program for switching between windows on swaywm"
authors = [
    "x1b6e6 <ftdabcde@gmail.com>",
]
license = "MIT"
edition = "2018"

[dependencies]
evdev-rs-tokio = "0.4.0"
clap = "2.34.0"
nix = "0.23.0"
async-stream = "0.3.2"
futures-core = "0.3.18"
futures-util = "0.3.18"

[dependencies.tokio]
version = "1.14.0"
features = [
    "fs",
    "macros",
    "rt",
    "sync",
]

[dependencies.swayipc-async]
git = "https://github.com/jaycefayne/swayipc-rs"
